tests/errors/sem.expected-integer.accessor.or
main :: () -> void {
    x := [2]int.{};
    x[true];
};
